@@ -38,15 +38,11 @@ ifeq ($(DEB_HOST_ARCH_OS),linux)
   ifeq ($(DEB_HOST_ARCH),amd64)
 	platform_arg = linux-g++-64
   else
-    ifeq ($(DEB_HOST_ARCH),ia64)
+    ifeq ($(DEB_HOST_ARCH),sparc64)
 	platform_arg = linux-g++-64
     else
-      ifeq ($(DEB_HOST_ARCH),sparc64)
-	platform_arg = linux-g++-64
-      else
 	platform_arg = linux-g++
-      endif # sparc64
-    endif # ia64
+    endif # sparc64
   endif # amd64
 else
 	platform_arg = glibc-g++
